control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/http-route-attachment/gateway-namespaces.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

#$ Used in:
#$ - site-src/concepts/api-overview.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: prod-gateway
  namespace: gateway-api-example-ns1
spec:
  gatewayClassName: foo-lb
  listeners:
  - name: prod-web
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
      - kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchLabels:
            expose-apps: "true"
