control-plane/gateway07/gateway-api-0.7.1-custom/examples/standard/http-route-attachment/httproute.yaml
# Copyright IBM Corp. 2018, 2026
# SPDX-License-Identifier: MPL-2.0

#$ Used in:
#$ - site-src/concepts/api-overview.md
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: my-route
  namespace: gateway-api-example-ns2
spec:
  parentRefs:
  - kind: Gateway
    name: foo-gateway
    namespace: gateway-api-example-ns1
  rules:
  - backendRefs:
    - name: foo-svc
      port: 8080
